@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-21T01:23:06Z",
-  "count_outdated" : 4638,
-  "uniques_outdated" : 2380,
-  "count" : 4658,
-  "uniques" : 2398,
+  "timestamp" : "2025-02-21T12:36:04Z",
+  "count_outdated" : 4640,
+  "uniques_outdated" : 2382,
+  "count" : 4659,
+  "uniques" : 2399,
   "clones" : [
-    {
-      "timestamp": "2025-02-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2025-02-08T00:00:00Z",
       "count": 2,
@@ -118,6 +109,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
