@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-02-07T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-02-08T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -65,6 +60,11 @@
     {
       "timestamp": "2025-02-20T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-21T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
